# bibliya

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md
libs/: CMakeLists.txt
libs/imgui/: imconfig.h
src/: buch.cpp  buch.hpp  laden.cpp  laden.hpp  lesezeichen.cpp  lesezeichen.hpp  main.cpp  mainmenu.cpp  mainmenu.hpp  sonstiges.hpp  suche.cpp  suche.hpp  tab.cpp  tab.hpp  uebersetzung.cpp  uebersetzung.hpp  ui.cpp  ui.hpp  zufall.hpp
